--- a/project1-image_filter/practical-work-01/practical-work1-andyortiz/First Practical Work.ipynb
+++ b/project1-image_filter/practical-work-01/practical-work1-andyortiz/First Practical Work.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Visualization\n",
     "\n",
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +340,7 @@
    "metadata": {},
    "source": [
     "The use of thread pools in this project allows us to take advantage of the concurrency offered by multicore architectures on modern computers. In software, when we execute an algorithm or a program using a single thread, we are leaving valuable resources unused. By using thread pools, we can maximize the amount of parallel tasks that are executed because a thread can be reused if a thread in a thread pool completes its execution and a new thread is created to replace a thread that is terminated. However, in this particalr case we are applying two filters on a single image simultaneously. In order to achieve this, we created two processes that divide the CPU's resources in two and store the results in a shared memory location. Now, the way the general algorithm works is great but it is limited since we are simply using Python's multiprocessing library. We would most likely see an increase in performance if we used the Ray framework. \n",
-    "This framework is a faster and simpler framework for building and running distributed applications. Thw following article highlights the tradeoffs between using Ray vs using Python's multiprocessing. <https://towardsdatascience.com/10x-faster-parallel-python-without-python-multiprocessing-e5017c93cce1>.\n",
+    "This framework is a faster and simpler framework for building and running distributed applications. The following article highlights the tradeoffs between using Ray vs using Python's multiprocessing. <https://towardsdatascience.com/10x-faster-parallel-python-without-python-multiprocessing-e5017c93cce1>.\n",
     "\n",
     "Secondly, in this practical work we are processing images with the cores available on our machine. However, this is a huge bottleneck because CPUs on consumer machines don't usually come with a large amount of available cores. If we could process these images using a GPU, we would see a huge increase in performance since the number of threads avaiable on a GPU often  hundreds of times greater. GPUs use the SIMT (single instruction, multiple threads) programming model, so it is highly parallelizable. Additionally, GPUs have shared memory that simultaneously available to each core of one multiprocessor, is a lot faster than the bandwidth of of the L1 cache of a CPU\n"
    ]
